# Prime_Counting

./: .env  .gitignore  CHANGELOG.md  README.md  Unit_3_Project_Prime_Count_Only.ipynb  pyproject.toml
algorithms/: drafting.py  example.py  pCount.py  pCount_og.py  play.py  twin.py
algorithms/crabby_primes/: Cargo.toml
algorithms/crabby_primes/src/: main.rs
archive/Prime_Counting/algorithms/: pCount_og.py  storage_sqlite.py  twin.py  twinz.py
archive/Prime_Counting/algorithms/crabby_primes/: Cargo.toml
data/: results.db
src/square_island/: README.md  island.py
