[project]
name = "cicada"
version = "0.1.0"
description = ""
authors = [
    {name = "dennissmith0",email = "domoreburpees@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "polars (>=1.29.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
