[package]
name = "crabby_primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = [
    "env",
    "derive",
    "suggestions",
    "color",
    "wrap_help",
] }
hashbrown = { version = "0.14.3", features = [
    "ahash",
    "allocator-api2",
    "inline-more",
    "rayon",
    "serde",
] }
mimalloc = { version = "0.1.39" }
ndarray = { version = "0.15.6", features = [
    "std",
    "rayon",
    "serde",
    "matrixmultiply-threading",
] }
num_cpus = "1.16.0"
range-set-blaze = { version = "0.1.15", features = [
    "alloc",
    "std",
    "num-traits",
    "num-integer",
    "itertools",
] }
rayon = "1.8.1"
rustc-hash = "1.1.0"
